// protoc --go_out=plugins=grpc:. api.proto
syntax = "proto3";

package api;

import "google/protobuf/empty.proto";

option go_package = ".;api";

message Port {
    string id = 1;
    string name = 2;
    string city = 3;
    string country = 4;
    string province = 5;
    string timezone = 6;
    string code = 7;
    repeated double coordinates = 8;
    repeated string unlocs = 9;
    repeated string alias = 10;
    repeated string regions = 11;
}

message PortRequest {
    string PortID = 1;
}

service PortService {
   rpc UploadPorts(stream Port) returns (google.protobuf.Empty) {}

   rpc GetPort(PortRequest) returns (Port) {}

   rpc GetPorts(google.protobuf.Empty) returns (stream Port) {}
}
